// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/buttons/SecondaryButton Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 30.76923076923077,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
        Object {
          "elevation": 5,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 0,
            "width": 7.6923076923076925,
          },
          "shadowOpacity": 0.07,
          "shadowRadius": 15.384615384615385,
        },
        Array [
          Object {
            "height": 92.3076923076923,
            "width": 565.3846153846154,
          },
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ],
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
    testID="secondary-btn-test-id"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          undefined,
        ]
      }
      testID="secondary-btn-test-id-container"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "mykross",
              "textAlign": "center",
            },
            Object {
              "color": "#C63733",
              "fontSize": 20,
            },
            Object {
              "marginRight": 15.384615384615385,
            },
          ]
        }
        testID="secondary-btn-test-id-icon"
      >
        U
      </Text>
      <Text
        adjustsFontSizeToFit={true}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 18,
              "lineHeight": 28,
              "textAlign": "left",
            },
            Object {
              "color": "#C63733",
            },
          ]
        }
        testID="secondary-btn-test-id-text"
      >
        Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots components/buttons/SecondaryButton Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 30.76923076923077,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
        Object {
          "elevation": 5,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 0,
            "width": 7.6923076923076925,
          },
          "shadowOpacity": 0.07,
          "shadowRadius": 15.384615384615385,
        },
        Array [
          Object {
            "height": 92.3076923076923,
            "width": 565.3846153846154,
          },
          Object {},
        ],
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
    testID="secondary-btn-test-id"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          undefined,
        ]
      }
      testID="secondary-btn-test-id-container"
    >
      <Text
        adjustsFontSizeToFit={true}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 18,
              "lineHeight": 28,
              "textAlign": "left",
            },
            Object {
              "color": "#C63733",
            },
          ]
        }
        testID="secondary-btn-test-id-text"
      >
        Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots components/buttons/SecondaryButton With Icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 30.76923076923077,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
        Object {
          "elevation": 5,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 0,
            "width": 7.6923076923076925,
          },
          "shadowOpacity": 0.07,
          "shadowRadius": 15.384615384615385,
        },
        Array [
          Object {
            "height": 92.3076923076923,
            "width": 565.3846153846154,
          },
          Object {},
        ],
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
    testID="secondary-btn-test-id"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          undefined,
        ]
      }
      testID="secondary-btn-test-id-container"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "mykross",
              "textAlign": "center",
            },
            Object {
              "color": "#C63733",
              "fontSize": 20,
            },
            Object {
              "marginRight": 15.384615384615385,
            },
          ]
        }
        testID="secondary-btn-test-id-icon"
      >
        U
      </Text>
      <Text
        adjustsFontSizeToFit={true}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 18,
              "lineHeight": 28,
              "textAlign": "left",
            },
            Object {
              "color": "#C63733",
            },
          ]
        }
        testID="secondary-btn-test-id-text"
      >
        Button
      </Text>
    </View>
  </View>
</View>
`;
